# Raytracer-2025

./: .gitignore  Cargo.toml  README.md
assets/: koishi.mtl  koishi_alpha.mtl  morisa.mtl  raytracer.mtl  utsuho.mtl  word.mtl
bonus/: bonus_list.md
src/: aabb.rs  bvh.rs  camera.rs  hit_checker.rs  hitchecker.rs  interval.rs  library.rs  main.rs  material.rs  modeling.rs  mtl.rs  my_image.rs  obj.rs  onb.rs  pdf.rs  perlin.rs  random.rs  ray.rs  raytracer.rs  sketchpad.rs  texture.rs  uv.rs  vec3.rs  vec3color.rs
