[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/library.rs"

[dependencies]
tobj = "3.2.5"
rayon = "1.10.0"
image = "0.25.6"
console = "0.16.0"
indicatif = "0.17.11"
rand = { version = "0.9.1", features = ["std", "small_rng"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
